sock-shop/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: techniche.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sock-shop
            port:
              number: 80
